# drawing-photos

./: CMakeLists.txt  README.md  linefilter.cpp  linefilter.h  main.cpp  sample.cpp  tonemapper.cpp  tonemapper.h  tools.cpp  tools.h
src/: CMakeLists.txt  RotateLine.txt  linefilter.cpp  main.cpp  tonemapper.cpp  tools.cpp
