set (CMAKE_CXX_STANDARD 11)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)

PROJECT(Project)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
ADD_EXECUTABLE(main main.cpp linefilter.cpp linefilter.h tonemapper.cpp tonemapper.h)
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS})
